# juice_templates

./: .gitignore  CMakeLists.txt  PLUGINS.md  README.md  package-lock.json  package.json
.claude/: system-config.json
plugins/BarkingHillLFOSync/: .continue-here.md  CHANGELOG.md  CMakeLists.txt  NOTES.md
plugins/BarkingHillLFOSync/.ideas/: architecture.md  creative-brief.md  parameter-spec.md  plan.md
plugins/BarkingHillLFOSync/.ideas/mockups/: v1-ui-test.html  v1-ui.yaml  v2-ui-test.html  v2-ui.yaml  v3-ui-test.html  v3-ui.yaml  v4-ui-test.html  v4-ui.yaml  v5-ui-test.html  v5-ui.yaml  v6-ui-test.html  v6-ui.yaml  v7-CMakeLists.txt  v7-PluginEditor.cpp  v7-PluginEditor.h  v7-integration-checklist.md  v7-ui-test.html  v7-ui.yaml
plugins/BarkingHillLFOSync/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/BarkingHillLFOSync/Source/ui/public/: index.html
src/: index.js
test/: index.test.js
